Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -80,14 +80,17 @@ Although simulation models of geographical systems in general and agent-based mo
 Simulation within computer models has been recognised and increasingly used by geographers as an efficient tool to explore geographical processes, hypotheses and predictive scenarios within virtual laboratories \citep{batty1971modelling, batty2007model, carley1999generating, Quesneletal2009}. %\comment{+ Seb \& James Doran in the 1970s??}
  Simulation also appears as a way to overcome the difficult analytic resolution of many spatial models which were developed in the past, as well as to explore the possible (alternative) trajectories of social and ecological systems in space and time. The specificity of geographical models compared to other social sciences' models is that space and spatial interactions are given a prime role, as geographers are driven by an explicit interest in studying the way space influences the outcomes of the model. Indeed, they usually seek to understand and model the role of space in social interactions and environmental processes, in a city for example. We think simulation can become a very good tool to achieve this, provided that models do include relevant spatial descriptions and behavioural rules which take space into account, and provided that the model evaluation includes a sensitivity analysis of output variations to the way space is modelled. Unfortunately, the first condition is not always met, and the second is seldom even mentioned. This paper aims to fill a methodological and conceptual gap, which is a systematic testing of the sensitivity of a model's outcomes to its initial spatial conditions. To demonstrate the genericity of our approach, we develop two applications with classic simulation models commonly used as case studies for comparing and aligning simulation models \citep{Axtelletal1996, wilensky2007making}: \citet{schelling1971dynamic}'s model of segregation and \citet{EpsteinAxtell1996}'s Sugarscape model, both defined at the intra-urban level.\\
 
-An urban system can be defined as a large number of diverse social agents interacting with one another, within a limited portion of space. Social agents thus constitute the microscopic level of urban systems, and they are framed by a system-time that evolves irreversibly, creating temporal and cumulative effects. Self-organization has been shown to be a central feature of urban systems~\citep{AllenSanglier1981,saint1989villes, Portugali2000} and, in the framework of complex systems, cities exhibit qcharacteristics that emergent properties at qualitatively differentiated scales~\citep{pumain2006hierarchy, AzizAlaouiBertelle2009} must be obtained through simulation methods~\citep{Wu2002, Batty2007}. Complexity is thus partially due to bifurcations, which are determinant in spatial systems~\citep{Wilson1981, Wilson2002}. Indeed, in spatially explicit simulation models, the non-linearity of local interactions is very likely to sublimate small perturbations in the initial spatial setting, making it difficult to interpret the resulting global structures. \\
-Another crucial aspect of spatio-temporal complex systems in general, and cities in particular, is their non-ergodicity~\citep{pumain2012urban}, which means that cross-sectional samples in space (the different cities of a country at time t) are not equivalent to samples in time (the same city at time t, t+1, t+2...) to compute statistics such as average. On the contrary, strong spatio-temporal path-dependencies in the trajectory of individual cities and changing social environments over time provide the use of ergodic models. Similarly to what \citet{gell1995quark} calls \emph{frozen accidents} in complex system generally, a given configuration contains clues on past bifurcations, that can have had dramatic effects on the state of the system. \\
+\subsection{Definition of the problem}
 
-Although this may seem obvious, cities are not regular grids, and the distribution of density (of jobs, residents, buildings, etc.) in cities is far from isotropic, even in the most sprawled cities. On the contrary, there is a significant diversity in the way people, activities and structures are distributed in cities. In Europe for example, \citet{LeNechet2015} quantifies and classifies six broad types of residential density distributions. However, most geographical models, especially cellular automata, represent cities as uniform grids of isotropic densities. Even in applied cases when GIS geometries of a particular city are used, the spatial distribution of agents is still approximated by a constant density \citep{arribas2014diverse}, although previous research shows that it is computationally and methodologically feasible to use accurate locations in a simple model such as Schelling's \citep{benenson2002entity}. The isotropic simplification is potentially harmful to the representation of the urban processes under inquiry because density and accessibility have environmental, economic and social consequences. Additionally, we expect the initial spatial distribution of agents to influence simulation results in the long run \citep{Castellanoetal2009}, because the agents' rule of action itself may depend on the spatial structure of the environment. For example, households can have different preferences with respect to the built-environment they want to live in \citep{SpielmanHarrison2014}, or agents can move around and sense their environment up to a certain distance, so that the resulting number of sensed objects will depend on the topology \citep{Banos2012} and distribution of density of the sensed environment \citep{LauriJaggi2003, FossettDietrich2009}. The way modellers abstract space is therefore a central element of geographical simulation models. A meaningful way of abstracting space might thus be to consider, not necessarily the peculiarities of every city, but at least their broad density structures.
+An urban system can be defined as a large number of diverse social agents interacting with one another, within a limited portion of space. Social agents thus constitute the microscopic level of urban systems, and they are framed by a system-time that evolves irreversibly, creating temporal and cumulative effects. Self-organization has been shown to be a central feature of urban systems~\citep{AllenSanglier1981,saint1989villes, Portugali2000} and, in the vocabulary of complex systems, cities also exhibit emergent properties at macroscopic scales~\citep{pumain2006hierarchy, AzizAlaouiBertelle2009}, which can be simulated through microscopic interactions between agents~\citep{Wu2002, Batty2007}. Complexity is partially due to bifurcations, which are determinant in spatial systems~\citep{Wilson1981, Wilson2002}. Indeed, in spatially explicit simulation models, the non-linearity of local interactions is very likely to sublimate small perturbations in the initial spatial setting, making it difficult to interpret the resulting global structures. \\
+
+Another crucial aspect of spatio-temporal complex systems in general, and cities in particular, is their non-ergodicity~\citep{pumain2012urban}, which means that cross-sectional samples in space (the different cities of a country at time t) are not equivalent to samples in time (the same city at time t, t+1, t+2...) to compute statistics such as average. Similarly to what \citet{gell1995quark} calls \emph{frozen accidents} in complex system generally, a given configuration contains clues on past bifurcations, that can have had dramatic effects on the state of the system. Therefore, strong spatio-temporal path-dependencies in the trajectory of individual cities and changing social environments over time prohibits the use of ergodic models... which are the main models to be found in geosimulation! \\
+
+Finally, although this may seem obvious, cities are not regular grids, and the distribution of density (of jobs, residents, buildings, etc.) in cities is far from isotropic, even in the most sprawled cities. On the contrary, there is a significant diversity in the way people, activities and structures are distributed in cities. In Europe for example, \citet{LeNechet2015} quantifies and classifies six broad types of residential density distributions. However, most geographical models, especially cellular automata, represent cities as uniform grids of isotropic densities. Even in applied cases when GIS geometries of a particular city are used, the spatial distribution of agents is still approximated by a constant density \citep{arribas2014diverse}, although previous research shows that it is computationally and methodologically feasible to use accurate locations in a simple model such as Schelling's \citep{benenson2002entity}. The isotropic simplification is potentially harmful to the representation of the urban processes under inquiry because density and accessibility have environmental, economic and social consequences. Additionally, we expect the initial spatial distribution of agents to influence simulation results in the long run \citep{Castellanoetal2009}, because the agents' rule of action itself may depend on the spatial structure of the environment. For example, households can have different preferences with respect to the built-environment they want to live in \citep{SpielmanHarrison2014}, or agents can move around and sense their environment up to a certain distance, so that the resulting number of sensed objects will depend on the topology \citep{Banos2012} and distribution of density of the sensed environment \citep{LauriJaggi2003, FossettDietrich2009}. The way modellers abstract space is therefore a central element of geographical simulation models. A meaningful way of abstracting space might thus be to consider, not necessarily the peculiarities of every city, but at least their broad density structures.
 
 \subsection{Objective}
 
-In this paper, we suggest a way of performing a sensitivity analysis to the spatial conditions of models by using a spatial generator to produce a variety of density grids, which are then fed into simulation models at initialisation. The generator being controlled by meta-parameters, we can then relate the parameters used to generate initial spatial conditions to the variation in outcome of the simulations. The purpose is two-fold: 1/ to test the robustness of simulation results to small variations of meta-parameters and 2/ to study the non-trivial effects of typical categories of spatial distribution (monocentric \textit{vs.} polycentric for example) on the results of a given model. Our approach allows for a systematic comparison of several aspects of the spatial configuration problem, which has been suggested by \citet{filatova2013spatial}, but hardly implemented and achieved in previous studies, which tend to focus on single aspects of the debate. In particular, it is applied to the effects of urban form on simulation results, using Schelling's model as a first case study and Sugarscape as a second one. 
+In this paper, we suggest a way of performing a sensitivity analysis to the spatial conditions of models by using a spatial generator to produce a variety of density grids, which are then fed into simulation models at initialisation. The generator being controlled by meta-parameters, we can then relate the parameters used to generate initial spatial conditions to the variation in outcome of the simulations. The purpose is two-fold: 1/ to test the robustness of simulation results to small variations of meta-parameters and 2/ to study the non-trivial effects of typical categories of spatial distribution (monocentric \textit{vs.} polycentric for example) on the results of a given model. Our approach allows for a systematic comparison of several aspects of the spatial configuration problem, which have been suggested by \citet{filatova2013spatial}, but hardly implemented and achieved in previous studies. In particular, it is applied to the effects of urban form on simulation results, using Schelling's model as a first case study and Sugarscape as a second one. 
 
 %%%%%%%%%%%%%%%%%%%%%%
 \subsection{Previous considerations on the effects of the spatial configuration in simulation models}
@@ -95,15 +98,15 @@ In this paper, we suggest a way of performing a sensitivity analysis to the spat
 
 %\comment[FL]{Je pense que cette partie est vraiment utile, et devrait être étoffée, en procédant peut être à une typologie plus systématique des "initial condition" qui nous intéressent. Il y a déjà une différence entre l'hétérogénéité de l'espace (densités réparties mono ou poly, etc) et les différentes façons de représenter l'espace (grilles carrées, hexagones). Par ailleurs aussi des discussions sur l'incertitude de l'information (est ce que par exemple les emplois downscalés au carreau INSEE par Pivano 2016 c'est vraiment fiable ou très ?) et la précision de la grille} 
 
-Different spatial configurations produce different distributions of income, carbon emissions, educational outcomes, etc. For example, \citet{wheeler2006urban} shows that, in the US, sprawling cities tend to be more unequal than their compact counterparts with respects to income. Dynamically, sprawl consists in the addition of new developments which have been occupied by different groups of population, resulting in a concentration of the wealthy in suburban pockets and of pockets of poverty in the inner city area \citep{jargowsky2002sprawl}. Similarly, in terms of pollution for example, \citet[p.173]{schwanen2001travel} show that \textit{``deconcentration of urban land uses encourages driving and discourages the use of public transport as well as cycling and walking''}. The discussion of these effects has also been extensive in the field of geostatistics, meanly since the exposure of the Modifiable Areal Unit Problem (MAUP) \citep{Openshaw1984, FotheringhamWong1991}. Recently, \citet{Kwan2012} has argued for a careful examination of what she coins the uncertain geographic context problem (UGCoP), i.e. of the spatial configuration of geographical units even when the size and delineation of the area are the same.\\
+In 'real-life', different spatial configurations of people in a city tend to be associated with different distributions of income, carbon emissions, educational outcomes, etc. For example, \citet{wheeler2006urban} shows that, in the US, sprawling cities are more unequal than their compact counterparts with respect to income. Dynamically, sprawl consists in the addition of new developments which have been occupied by different groups of population, resulting in a concentration of the wealthy in suburban pockets and of pockets of poverty in the inner city area \citep{jargowsky2002sprawl}. Similarly, in terms of pollution for example, \citet[p.173]{schwanen2001travel} show that \textit{``deconcentration of urban land uses encourages driving and discourages the use of public transport as well as cycling and walking''}. The discussion of these effects has also been associated with the field of geostatistics since the exposure of the Modifiable Areal Unit Problem (MAUP) \citep{Openshaw1984, FotheringhamWong1991}. For example, \citet{Kwan2012} has argued for a careful examination of what she coins the 'uncertain geographic context problem' (UGCoP), i.e. of the spatial configuration of geographical units even when the size and delineation of the area are the same.\\
 
 Considerations of such issues in the geographical modelling literature are rather scarce, although there have been some noticeable attempts to evaluate the effects of the same set of mechanisms run from different initial spatial conditions. Mainly, they have focused on the impact of:
 \begin{itemize}
 \item The accuracy of geo-localised input data;
-\item The spatial system shape, precision and boundaries;
-\item Spatial heterogeneity.
+\item The shape, precision and boundaries of the modelled spatial system;
+\item The degree of spatial heterogeneity modelled.
 \end{itemize}
-We detail these approaches in the paragraphs below. Other approaches, not included in the scope of this article, include the effects of the topology of space on the processes (cf. \citet{moreno2009integrating} who explore the role of the topology of possible interactions in a Schelling model). Generally, sensitivity analyses focus either on the spatial context (extent of the environment, shape of the zones if applicable - squares, hexagons, etc., objects - links, rasters, etc.); either on the spatial encoding of the heterogeneity of space (algorithms of disaggregation, interpolation, etc.), but rarely both at the same time.
+We detail these approaches in the paragraphs below. Other approaches, not included in the scope of this article, include the effects of the topology of space on the processes (cf. \citet{moreno2009integrating} who explore the role of the topology of possible interactions in a Schelling model). Generally, sensitivity analyses focus either on the spatial context (extent of the environment, shape of the zones if applicable - squares, hexagons, etc., objects - links, rasters, etc.); either on the spatial encoding of the heterogeneity of space (algorithms of disaggregation, interpolation, etc.), but rarely on both at the same time.
 
 \paragraph{Geo-localised input data accuracy:} \citet{Thomasetal2017} show that data selection in LUTI model is inter-related with the delineation of the spatial system boundaries and scale of analysis. They provide a few examples of how the use of Exploratory Spatial Data Analysis (ESDA) prior to simulation runs can help avoiding measurement errors of model behaviour and outcomes. In the context of spatial interaction models, \citet{hagen2012new} acknowledge the dilemma between spatial resolution and computational burden, and suggest a method of adaptive zoning (where the size of destination zones depends on the distance to origin) to solve it.
 
@@ -121,7 +124,7 @@ We detail these approaches in the paragraphs below. Other approaches, not includ
 %\cite{ligmann2013spatially}
 
 
-In this paper, we build on the contributions of these previous studies and go further by systematically measuring the impact of the city lattice on model behaviour, which has so far only been assessed through a small set of illustrative spatial structures. We illustrate the potential generalisation of our approach by running two distinctive agent-based models: Schelling's model of residential segregation and Sugarscape.
+In this paper, we build on these contributions and go further by systematically measuring the impact of the city density distribution on model behaviour, which has so far only been assessed through a small set of illustrative spatial structures. We illustrate the potential generalisation of our approach by running two distinctive agent-based models: Schelling's model and Sugarscape.
 
 %The example of transportation networks is a good illustration, as their spatial shape and hierarchy is strongly influenced by past investment decisions, technical choices, or political decisions sometimes not rational~(\cite{zembri2010new}). Some aggregated indicators will not take into account positions and trajectories of each agent (such as segregation in the Schelling model) but others, as in the case of spatial patterns of accessibility in a system of cities, fully capture the path-dependency and may therefore be highly dependent of the initial spatial configuration. It is not clear for example what shifted the economical and political capital of France from Lyon to Paris in the early Middle Age, some assumptions being the reconfiguration of trade patterns from South to North of Europe and thus an increased centrality for Paris due to its spatial position: the bifurcation induced by socio-economic and political factors took a deep significance with worldwide repercussions until today when magnified by the spatial configuration. \comment[JR]{quelqu'un sait si d'une part c'est vrai et d'autre part si des references backupent ca ? - je sors ca completement du chapeau pour l'instant mais ça me semble intuitivement raisonnable et une bonne illustration.}[(MLT)L'idée de donner un exemple me semble bonne mais je ne suis pas sûre qu'on l'amène de la bonne manière? --> en fait je crois que l'on a pas besoin de ce paragraphe illustratif, ça complique le papier. Qu'en pensez-vous?]  [(FL) : illustrer par les transports c'est une bonne idée mais pas besoin de parler du moyen âge! la faible croissance de Dijon depuis 30 ans peut être une illustration tarte à la crême. mais pas sûr effectivement qu'on ait absolument besoin d'illustration, en tous cas il n'y en a pas dans le § d'avant (bientôt après ;o)]
 
@@ -129,7 +132,8 @@ In this paper, we build on the contributions of these previous studies and go fu
 \section{Methods}
 %%%%%%%%%%%%%%%%%%%%%%
 
-In this section, we detail the method developed to analyse the sensitivity of simulation models to initial spatial conditions. The general method workflow is illustrated in Figure \ref{fig:method}. In addition to the usual protocol (upper branch in figure \ref{fig:method}, which consists of running a model $\mu$ with various values of its parameters, we introduced the lower branch in figure \ref{fig:method}. We wanted to emphasize that spatial effects do not only derive from grid size or shape effects, but indeed from the heterogeneity of relevant geographic entities (people, housing, networks, etc.) through geographical space. In models, the initial configuration of space can be either flat, or heterogeneous,  based on external databases and internal modelling (generation of synthetic population for instance \citep{bhat1999activity}).
+%In this section, we detail the method developed to analyse the sensitivity of simulation models to initial spatial conditions. 
+The general method workflow of our method is illustrated in Figure \ref{fig:method}. In addition to the usual protocol (upper branch of the figure), which consists of running a model $\mu$ with various values of its parameters, we introduced a spatial generator which depends on its own meta-parameters and feeds the model $\mu$ at initialisation (lower branch). The resulting configurations can be clustered into qualitative types of spatial patterns, so that the sensitivity analysis relates to the model's parameters, how the density spatial distribution was generated and the pattern of density in order to produce qualitative conclusion about the model and its behaviour. In particular, we want to emphasize that spatial effects only derive not only from grid size or shape effects, but also from the heterogeneity of relevant geographic entities (people, housing, networks, etc.) in geographical space. In the models we produced, the initial spatial configurations  can be either flat or heterogeneous, monocentric or polycentric, based on external databases and on internal modelling (generation of synthetic population for instance \citep{bhat1999activity}).
 %%%%%%%%%%%%%%%%%%%%%%
 \begin{figure*}[htbp] \begin{center} 
 \resizebox{0.9\textwidth}{!}{ 
@@ -137,10 +141,7 @@ In this section, we detail the method developed to analyse the sensitivity of si
 } \caption{\textbf{General workflow of our method.}} \label{fig:method} \end{center} \end{figure*} %
 %%%%%%%%%%%%%%%%%%%%%%
 
-In our approach, we introduce a spatial generator (lower branch in figure \ref{fig:method}), which itself is determined by input parameters and produces sets of spatial initial conditions. 
-To allow for the exploration of the relative effects of model parameters and spatial configuration, we cluster initial spatial conditions  to represent types of spaces ex-ante (for example: monocentric or polycentric density grids). The sensitivity analysis of the model is now run against $\mu$ parameters as well as spatial parameters or spatial types. It allows the sensitivity analysis to produce qualitative conclusions regarding the influence of spatial distribution on the outputs of simulation models, alongside the classic variation of parameter values.
-
-In order to test for the influence of spatial initial conditions on model outputs, we use a systematic method to compare phase diagrams. We define a phase diagram as the vector of model outputs considered as a function of model parameters. Technically, because of stochasticity, we represent the output of the model for a given combination of parameter values as the median of the final values of an output indicator obtained for the replications of the model initialized with this combination of parameters.\\
+In order to test for the influence of initial spatial conditions on model outputs, we use a systematic method to compare phase diagrams. We define a phase diagram as the vector of model outputs considered as a function of model parameters. Technically, because of stochasticity, we represent the output of the model for a given combination of parameter values $\overrightarrow{P}$ as the median of the final values of an output indicator $O$ obtained for the replications of the model initialized with $\overrightarrow{P}$.\\
 
 %Comparing phase diagrams is useful because it allows us to compare the 
 Indeed, we have as many phase diagrams than we have spatial grids, what makes a qualitative visual comparison not realistic (with around 50 different spatial configurations in our applications). A solution is to use systematic quantitative procedures. To our knowledge there exist no well established method to compare phase diagrams in agent-based modeling and geosimulation literature. We propose to use a relative distance between two phase diagram corresponding to the share of between-diagrams variability relative to their internal variability, given formally in the case of a one-dimensional phase diagram by
@@ -363,16 +364,19 @@ We consider that the method presented holds great potential for strengthening ge
 \subsection{Opportunities and extensions}
 
 
-\paragraph{Reproducibility and Applicability.} \comment[CC]{Lancer des pistes sur comment travailler l'effet de la grille pour d'autres types de modélisation type modèles appliqués.}
+\paragraph{Reproducibility and Applicability.} 
+%\comment[CC]{Lancer des pistes sur comment travailler l'effet de la grille pour d'autres types de modélisation type modèles appliqués.}
+
 Although the applications we present here are limited by the simplicity of the models, we think that the method could (and should) be applied to larger models including domain mechanisms and more empirical initialisation data, for example synthetic populations. The sensitivity analysis to initial spatial conditions could then be either a replication on the spatial allocation of the synthetic population, or a series of spatial permutations of the empirical spatial inputs.
-We want foster this extension of our work by releasing the density grids also generated, as well as the generating work-flow \comment[CC]{add link to github repo}. Another way to go would be to implement additional generators, such as social networks \citep{alizadeh2016generating} with localised agents. 
+We want foster this extension of our work by releasing the density grids also generated, as well as the generating work-flow and the model implementation. They are available on the open repository of the project at \url{https://github.com/AnonymousAuthor2/SpaceMatters}. Another way to go would be to implement additional generators, such as social networks \citep{alizadeh2016generating} with localised agents. 
 
 
 \paragraph{An emancipation opportunity for social sciences.}
 
-\comment[MLT]{Au-delà de l'outil NetLogo, parler de la formalisation de l'espace par les physiciens qui a influencé les modèles en géographie (cf: commentaire de Florent que je propose de bouger ici)?}
-\comment[FLN]{opportunity for social science to emancipate from the very strong hypotheses of physicists that have become standards (homogeneity and isotropy of space), even though they are never valid in social systems.} 
+%\comment[MLT]{Au-delà de l'outil NetLogo, parler de la formalisation de l'espace par les physiciens qui a influencé les modèles en géographie (cf: commentaire de Florent que je propose de bouger ici)?}
+%\comment[FLN]{opportunity for social science to emancipate from the very strong hypotheses of physicists that have become standards (homogeneity and isotropy of space), even though they are never valid in social systems.} 
 
+As~\citet{pumain2003approche} points out in an overview of complexity approaches in geography, transfer of models and concepts between disciplines may induce a transfer of corresponding assumptions, that become senseless taken out of context. Geography and social science in general have been in the last decades strongly influenced by insights from physics, that beside their enriching 
 
 
 
@@ -417,9 +421,10 @@ After reviewing the extensive literature on spatial biases in statistical and si
 %%%%%%%%%%%%%
 % Acknowledgements
 
-\begin{acks}
-The authors acknowledge the funding of their institutions and the EPSRC project number EP/M023583/1. Results obtained in this paper were computed on the vo.complex-system.eu virtual organization of the European Grid Infrastructure ( http://www.egi.eu ). We thank the European Grid Infrastructure and its supporting National Grid Initiatives (France-Grilles in particular) for providing the technical support and infrastructure.
-\end{acks}
+% acks commentés pour la soumission (anonymous)
+%\begin{acks}
+%The authors acknowledge the funding of their institutions and the EPSRC project number EP/M023583/1. Results obtained in this paper were computed on the vo.complex-system.eu virtual organization of the European Grid Infrastructure ( http://www.egi.eu ). We thank the European Grid Infrastructure and its supporting National Grid Initiatives (France-Grilles in particular) for providing the technical support and infrastructure.
+%\end{acks}
 
 
 
