--- a/spacematters.bib
+++ b/spacematters.bib
@@ -1,3 +1,16 @@
+
+
+@article{pumain2003approche,
+	Author = {Pumain, Denise},
+	Journal = {G{\'e}ocarrefour},
+	Number = {1},
+	Pages = {25--31},
+	Title = {Une approche de la complexit{\'e} en g{\'e}ographie},
+	Volume = {78},
+	Year = {2003}}
+
+
+
 @ARTICLE{2017arXiv170806743R,
    author = {{Raimbault}, J.},
     title = {Calibration of a Density-based Model of Urban Morphogenesis},
