--- a/spacematters.bib
+++ b/spacematters.bib
@@ -1,4 +1,10 @@
 
+@article{o2015physicists,
+	Author = {O'Sullivan, David and Manson, Steven M},
+	Journal = {Annals of the Association of American Geographers},
+	Title = {Do Physicists Have'Geography Envy'? And What Can Geographers Learn From It?},
+	Year = {2015}}
+
 
 @article{pumain2003approche,
 	Author = {Pumain, Denise},
